--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -81,6 +81,13 @@ a:visited {
     color: white;
 }
 
+a:focus {
+    border: 0.5px solid #a6a6a6;
+    color: #a6a6a6;
+    font-weight: 500;
+    cursor: pointer;
+}
+
 a:hover {
     border: 0.5px solid #a6a6a6;
     color: #a6a6a6;
